# WisevoiceAgent

./: .gitignore  README.md
elevenlabs/: agent.js  package-lock.json  package.json  workflow.js
elevenlabs/public/: index.html
pipecatIntegration/: agent.py  pyproject.toml  runmodel.sh  serializer.py  server.py  stt.py  tts.py  workflow.py
pipecatIntegration/models/Kokoro/: README.md  download_model.py  kokoro-cpu.dockerfile  kokoro-gpu.dockerfile  server.py  test.py
pipecatIntegration/models/Kokoro/text_processing/: config.py  normalizer.py  phonemizer.py  text_processor.py  vocabulary.py
pipecatIntegration/models/Whisper/: README.md  docker-cpu.dockerfile  docker-gpu.dockerfile  download_model.py  server.py
pipecatIntegration/models/neuraltts/: dockerfile  requirements.txt  server.py
pipecatIntegration/public/: index.html
prompt/: system.md  workflow.json  workflows.md
